// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch - no params 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {},
    "type": "FETCH_ACCOUNT",
    "url": "/account",
  },
  "type": "SPARKPOST_API_REQUEST",
}
`;

exports[`fetch with params 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "params": Object {
      "also": "that one",
      "this": "one",
    },
    "type": "FETCH_ACCOUNT",
    "url": "/account",
  },
  "type": "SPARKPOST_API_REQUEST",
}
`;

exports[`getPlans 1`] = `
Object {
  "meta": Object {
    "method": "GET",
    "type": "GET_PLANS",
    "url": "/account/plans",
  },
  "type": "SPARKPOST_API_REQUEST",
}
`;
